# QWC-Console

./: CMakeLists.txt  README.md  d3d8.def  dllmain.cpp
inc/: Console.h
inc/QWC/: CLIData.h
inc/imgui_dx8/: Direct3DUtils.h  imgui_impl_dx8.h
src/QWC/: CLIData.cpp
src/dxsdk/: Direct3D8Wrapper.cpp  Direct3DDevice8Wrapper.cpp
src/imgui_dx8/: imgui_impl_dx8.cpp
